added fpcmacosall.pas till it is in FPC
 SVN 8418@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,8 @@ components/cgi/Makefile svneol=native#text/plain
 components/cgi/Makefile.fpc svneol=native#text/plain
 components/cgi/cgilaz.lpk svneol=native#text/pascal
 components/cgi/cgimodules.pas svneol=native#text/pascal
+components/cgi/ide/Makefile svneol=native#text/plain
+components/cgi/ide/Makefile.fpc svneol=native#text/plain
 components/cgi/ide/README.txt svneol=native#text/plain
 components/cgi/ide/cgilazide.lpk svneol=native#text/pascal
 components/cgi/ide/cgilazideintf.pas svneol=native#text/pascal
@@ -1771,6 +1773,7 @@ lcl/interfaces/carbon/carbonwspairsplitter.pp svneol=native#text/pascal
 lcl/interfaces/carbon/carbonwsspin.pp svneol=native#text/pascal
 lcl/interfaces/carbon/carbonwsstdctrls.pp svneol=native#text/pascal
 lcl/interfaces/carbon/carbonwstoolwin.pp svneol=native#text/pascal
+lcl/interfaces/carbon/fpcmacosall.pas svneol=native#text/plain
 lcl/interfaces/carbon/interfaces.pas svneol=native#text/pascal
 lcl/interfaces/gnome/gnomeint.pp svneol=native#text/pascal
 lcl/interfaces/gnome/gnomelclintf.inc svneol=native#text/pascal
