--- a/components/Makefile.fpc
+++ b/components/Makefile.fpc
@@ -24,5 +24,6 @@ bigidecomponents: all
         $(MAKE) -C rtticontrols
         $(MAKE) -C printers
         $(MAKE) -C cgi
+        $(MAKE) -C cgi/ide
 
 cleanlaz: clean
