--- a/ide/Makefile
+++ b/ide/Makefile
@@ -260,6 +260,7 @@ endif
 BIG_IDE_OPTIONS=-dBigIDE \
   -Fu../components/rtticontrols/lib/$(CPU_TARGET)-$(OS_TARGET) \
   -Fu../components/printers/lib/$(CPU_TARGET)-$(OS_TARGET) \
+  -Fu../components/cgi/ide/lib/$(CPU_TARGET)-$(OS_TARGET) \
   -Fu../components/cgi/lib/$(CPU_TARGET)-$(OS_TARGET)
 ifeq ($(FULL_TARGET),i386-linux)
 override TARGET_PROGRAMS+=lazarus startlazarus
