converted addtoproject dialog to lfm  from Darius
 SVN 8432@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -888,6 +888,8 @@ ide/Makefile.fpc svneol=native#text/plain
 ide/aboutfrm.lfm svneol=native#text/plain
 ide/aboutfrm.lrs svneol=native#text/pascal
 ide/aboutfrm.pas svneol=native#text/pascal
+ide/addtoprojectdlg.lfm svneol=native#text/plain
+ide/addtoprojectdlg.lrs svneol=native#text/plain
 ide/addtoprojectdlg.pas svneol=native#text/pascal
 ide/basedebugmanager.pas svneol=native#text/pascal
 ide/bigidemake.cfg svneol=native#text/plain
