--- a/.gitattributes
+++ b/.gitattributes
@@ -1089,6 +1089,8 @@ ide/unitdependencies.pas svneol=native#text/pascal
 ide/uniteditor.lfm svneol=native#text/plain
 ide/uniteditor.lrs svneol=native#text/plain
 ide/uniteditor.pp svneol=native#text/pascal
+ide/unitinfodlg.lfm svneol=native#text/plain
+ide/unitinfodlg.lrs svneol=native#text/plain
 ide/unitinfodlg.pp svneol=native#text/pascal
 ide/viewforms1.lrs svneol=native#text/pascal
 ide/viewunit_dlg.lfm svneol=native#text/plain
