added lpl file for lazopenglcontext packag
 SVN 8437@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -2099,6 +2099,7 @@ packager/addtopackagedlg.pas svneol=native#text/pascal
 packager/basepkgmanager.pas svneol=native#text/pascal
 packager/brokendependenciesdlg.pas svneol=native#text/pascal
 packager/globallinks/lazcustomform-0.lpl svneol=native#text/plain
+packager/globallinks/lazopenglcontext-0.lpl svneol=native#text/plain
 packager/globallinks/prettyformat-0.lpl svneol=native#text/plain
 packager/globallinks/projtemplates-0.lpl svneol=native#text/plain
 packager/installpkgsetdlg.lfm svneol=native#text/plain
