fixed TOpenGlControl at designtime
 SVN 8439@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -198,7 +198,9 @@ components/opengl/gtk2x11/include/xsettings-common.inc svneol=native#text/plain
 components/opengl/gtk2x11/scripts/gdkx11_h2pas.sh svneol=native#text/plain
 components/opengl/lazopenglcontext.lpk svneol=native#text/plain
 components/opengl/lazopenglcontext.pas svneol=native#text/plain
+components/opengl/openglcontext.lrs svneol=native#text/plain
 components/opengl/openglcontext.pas svneol=native#text/plain
+components/opengl/topenglcontrol.xpm svneol=native#text/plain
 components/prettyformat/pfidesource.pas svneol=native#text/plain
 components/prettyformat/prettyformat.lpk svneol=native#text/plain
 components/prettyformat/prettyformat.pas svneol=native#text/plain
