--- a/.gitattributes
+++ b/.gitattributes
@@ -326,11 +326,23 @@ components/sqldb/tmysqlconnection.xpm -text svneol=native#image/x-xpixmap
 components/sqldb/tpqconnection.xpm -text svneol=native#image/x-xpixmap
 components/sqldb/tsqlquery.xpm -text svneol=native#image/x-xpixmap
 components/sqldb/tsqltransaction.xpm -text svneol=native#image/x-xpixmap
+components/sqlite/registersqlite.pas svneol=native#text/plain
+components/sqlite/registersqlite3.pas svneol=native#text/plain
+components/sqlite/sqlite3icon.lrs svneol=native#text/plain
+components/sqlite/sqlite3laz.lpk svneol=native#text/plain
+components/sqlite/sqlite3laz.pas svneol=native#text/plain
+components/sqlite/sqlitecomponenteditor.lfm svneol=native#text/plain
+components/sqlite/sqlitecomponenteditor.lrs svneol=native#text/plain
+components/sqlite/sqlitecomponenteditor.pas svneol=native#text/plain
 components/sqlite/sqliteds.lrs svneol=native#text/pascal
 components/sqlite/sqlitedslaz.lpk svneol=native#text/pascal
 components/sqlite/sqlitedslaz.pas svneol=native#text/pascal
+components/sqlite/sqliteicon.lrs svneol=native#text/plain
+components/sqlite/sqlitelaz.lpk svneol=native#text/plain
+components/sqlite/sqlitelaz.pas svneol=native#text/plain
 components/sqlite/tableeditorform.lrs svneol=native#text/pascal
 components/sqlite/tableeditorform.pas svneol=native#text/pascal
+components/sqlite/tsqlite3dataset.xpm svneol=native#text/plain
 components/sqlite/tsqlitedataset.xpm -text svneol=native#image/x-xpixmap
 components/synedit/allsyneditunits.pp svneol=native#text/pascal
 components/synedit/design/tsynautocomplete.xpm -text svneol=native#image/x-xpixmap
