fixed layout bugs, added package to create MacOSX application folders
 SVN 8456@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -154,6 +154,13 @@ components/jpeg/jpegforlazarus.lpk svneol=native#text/pascal
 components/jpeg/jpegforlazarus.pas svneol=native#text/pascal
 components/jpeg/lazjpeg.pas svneol=native#text/pascal
 components/jpeg/readme.txt svneol=native#text/plain
+components/macfiles/Makefile svneol=native#text/plain
+components/macfiles/Makefile.fpc svneol=native#text/plain
+components/macfiles/examples/createmacapplication.lpi svneol=native#text/plain
+components/macfiles/examples/createmacapplication.lpr svneol=native#text/plain
+components/macfiles/macapplicationres.pas svneol=native#text/plain
+components/macfiles/macosfiles.lpk svneol=native#text/plain
+components/macfiles/macosfiles.pas svneol=native#text/plain
 components/memds/frmselectdataset.lfm svneol=native#text/plain
 components/memds/frmselectdataset.lrs svneol=native#text/pascal
 components/memds/frmselectdataset.pp svneol=native#text/pascal
