--- a/.gitattributes
+++ b/.gitattributes
@@ -1558,6 +1558,7 @@ lcl/alllclunits.pp svneol=native#text/pascal
 lcl/arrow.pp svneol=native#text/pascal
 lcl/asyncprocess.pp svneol=native#text/plain
 lcl/avglvltree.pas svneol=native#text/pascal
+lcl/buttonpanel.pas svneol=native#text/plain
 lcl/buttons.pp svneol=native#text/pascal
 lcl/calendar.pp svneol=native#text/pascal
 lcl/chart.pp svneol=native#text/pascal
