--- a/.gitattributes
+++ b/.gitattributes
@@ -1092,6 +1092,8 @@ ide/splash.pp svneol=native#text/pascal
 ide/startlazarus.lpr svneol=native#text/pascal
 ide/startlazarus.rc svneol=native#text/plain
 ide/startlazopts.pas svneol=native#text/pascal
+ide/sysvaruseroverridedlg.lfm svneol=native#text/plain
+ide/sysvaruseroverridedlg.lrs svneol=native#text/plain
 ide/sysvaruseroverridedlg.pas svneol=native#text/pascal
 ide/todolist.lfm svneol=native#text/plain
 ide/todolist.lrs svneol=native#text/plain
