converted AlignCompsDlg to lfm  from Darius
 SVN 8482@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -499,6 +499,8 @@ debugger/watchpropertydlg.pp svneol=native#text/pascal
 designer/abstractcompiler.pp svneol=native#text/pascal
 designer/abstracteditor.pp svneol=native#text/pascal
 designer/abstractfilesystem.pp svneol=native#text/pascal
+designer/aligncompsdlg.lfm svneol=native#text/plain
+designer/aligncompsdlg.lrs svneol=native#text/plain
 designer/aligncompsdlg.pp svneol=native#text/pascal
 designer/anchoreditor.lfm svneol=native#text/plain
 designer/anchoreditor.lrs svneol=native#text/pascal
