converted ScaleCompsDlg to lfm  from Darius
 SVN 8485@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -520,6 +520,8 @@ designer/menueditorform.pas svneol=native#text/pascal
 designer/menupropedit.pp svneol=native#text/pascal
 designer/noncontroldesigner.pas svneol=native#text/pascal
 designer/objinspext.pas svneol=native#text/pascal
+designer/scalecompsdlg.lfm svneol=native#text/plain
+designer/scalecompsdlg.lrs svneol=native#text/plain
 designer/scalecompsdlg.pp svneol=native#text/pascal
 designer/sizecompsdlg.pp svneol=native#text/pascal
 designer/taborderdlg.lfm svneol=native#text/plain
