converted SizeCompsDlg to lfm  from Darius
 SVN 8486@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -523,6 +523,8 @@ designer/objinspext.pas svneol=native#text/pascal
 designer/scalecompsdlg.lfm svneol=native#text/plain
 designer/scalecompsdlg.lrs svneol=native#text/plain
 designer/scalecompsdlg.pp svneol=native#text/pascal
+designer/sizecompsdlg.lfm svneol=native#text/plain
+designer/sizecompsdlg.lrs svneol=native#text/plain
 designer/sizecompsdlg.pp svneol=native#text/pascal
 designer/taborderdlg.lfm svneol=native#text/plain
 designer/taborderdlg.lrs svneol=native#text/pascal
