converted pkg graph explorer to lfm  from Darius
 SVN 8492@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -2143,6 +2143,8 @@ packager/packagedefs.pas svneol=native#text/pascal
 packager/packageeditor.pas svneol=native#text/pascal
 packager/packagelinks.pas svneol=native#text/pascal
 packager/packagesystem.pas svneol=native#text/pascal
+packager/pkggraphexplorer.lfm svneol=native#text/plain
+packager/pkggraphexplorer.lrs svneol=native#text/plain
 packager/pkggraphexplorer.pas svneol=native#text/pascal
 packager/pkgmanager.pas svneol=native#text/pascal
 packager/pkgoptionsdlg.pas svneol=native#text/pascal
