--- a/.gitattributes
+++ b/.gitattributes
@@ -186,6 +186,7 @@ components/opengl/example/testopenglcontext1.lpi svneol=native#text/plain
 components/opengl/example/testopenglcontext1.lpr svneol=native#text/plain
 components/opengl/glcarbonaglcontext.pas svneol=native#text/plain
 components/opengl/glgtkglxcontext.pas svneol=native#text/plain
+components/opengl/glwin32wglcontext.pas svneol=native#text/plain
 components/opengl/gtk2x11/gdk2x.pas svneol=native#text/plain
 components/opengl/gtk2x11/gdk2x11.lpk svneol=native#text/plain
 components/opengl/gtk2x11/gdk2x11.pas svneol=native#text/plain
