fixed files section   from Joost (issue 1581)
 SVN 8513@trunk

--- a/tools/install/rpm/lazarus.spec.template
+++ b/tools/install/rpm/lazarus.spec.template
@@ -59,9 +59,8 @@ update-desktop-database &> /dev/null ||:
 %files
 %defattr(-,root,root,-)
 %{_libdir}/%{name}
-%{_bindir}/%{name}
+%{_bindir}/*
   %{_datadir}/pixmaps/lazarus.png
-#  %{_datadir}/gnome/apps/Development/lazarus.desktop
   %{_datadir}/applications/lazarus.desktop
 
 %changelog
