layout fixes  from Darius
 SVN 8538@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1145,6 +1145,9 @@ ideintf/formeditingintf.pas svneol=native#text/pascal
 ideintf/frmselectprops.lfm svneol=native#text/plain
 ideintf/frmselectprops.lrs svneol=native#text/plain
 ideintf/frmselectprops.pas svneol=native#text/plain
+ideintf/graphicpropedit.lfm svneol=native#text/plain
+ideintf/graphicpropedit.lrs svneol=native#text/plain
+ideintf/graphicpropedit.pas svneol=native#text/plain
 ideintf/graphpropedits.pas svneol=native#text/pascal
 ideintf/helpfpdoc.pas svneol=native#text/pascal
 ideintf/helphtml.pas svneol=native#text/pascal
