added trayicon package  from Felipe Monteiro de Carvalho
 SVN 8539@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -448,6 +448,27 @@ components/tdbf/dbflaz.pas svneol=native#text/pascal
 components/tdbf/registerdbf.lrs svneol=native#text/pascal
 components/tdbf/registerdbf.pas svneol=native#text/pascal
 components/tdbf/tdbf.xpm -text svneol=native#image/x-xpixmap
+components/trayicon/examples/clean.bat svneol=native#text/plain
+components/trayicon/examples/clean.sh svneol=native#text/plain
+components/trayicon/examples/frmtest.dfm svneol=native#text/plain
+components/trayicon/examples/frmtest.lfm svneol=native#text/plain
+components/trayicon/examples/frmtest.lrs svneol=native#text/plain
+components/trayicon/examples/frmtest.pas svneol=native#text/plain
+components/trayicon/examples/icon.ico -text svneol=unset#image/ico
+components/trayicon/examples/icon.xpm svneol=native#text/plain
+components/trayicon/examples/magnifier.or -text
+components/trayicon/examples/magnifier.res -text
+components/trayicon/examples/wndtray.cfg svneol=native#text/plain
+components/trayicon/examples/wndtray.dof svneol=native#text/plain
+components/trayicon/examples/wndtray.dpr svneol=native#text/plain
+components/trayicon/examples/wndtray.lpi svneol=native#text/plain
+components/trayicon/trayicon.pas svneol=native#text/plain
+components/trayicon/trayiconlaz.lpk svneol=native#text/plain
+components/trayicon/trayiconlaz.pas svneol=native#text/plain
+components/trayicon/wsgtk2trayicon.pas svneol=native#text/plain
+components/trayicon/wsgtktrayicon.pas svneol=native#text/plain
+components/trayicon/wstrayicon.pas svneol=native#text/plain
+components/trayicon/wswin32trayicon.pas svneol=native#text/plain
 components/turbopower_ipro/ipanim.pas svneol=native#text/pascal
 components/turbopower_ipro/ipconst.pas svneol=native#text/pascal
 components/turbopower_ipro/ipdefct.inc svneol=native#text/pascal
@@ -2141,6 +2162,7 @@ packager/globallinks/lazopenglcontext-0.lpl svneol=native#text/plain
 packager/globallinks/macosfiles-0.lpl svneol=native#text/plain
 packager/globallinks/prettyformat-0.lpl svneol=native#text/plain
 packager/globallinks/projtemplates-0.lpl svneol=native#text/plain
+packager/globallinks/trayiconlaz-0.lpl svneol=native#text/plain
 packager/installpkgsetdlg.lfm svneol=native#text/plain
 packager/installpkgsetdlg.lrs svneol=native#text/pascal
 packager/installpkgsetdlg.pas svneol=native#text/pascal
