converted MakeResStrDlg to lfm  from Darius
 SVN 8562@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1070,6 +1070,8 @@ ide/main.pp svneol=native#text/pascal
 ide/mainbar.pas svneol=native#text/pascal
 ide/mainbase.pas svneol=native#text/pascal
 ide/mainintf.pas svneol=native#text/pascal
+ide/makeresstrdlg.lfm svneol=native#text/plain
+ide/makeresstrdlg.lrs svneol=native#text/plain
 ide/makeresstrdlg.pas svneol=native#text/pascal
 ide/miscoptions.pas svneol=native#text/pascal
 ide/msgview.lfm svneol=native#text/plain
