--- a/tools/install/debian_fpcsrc/control
+++ b/tools/install/debian_fpcsrc/control
@@ -5,8 +5,9 @@ Priority: optional
 Maintainer: Mattias Gaertner <mattias@cvs.freepascal.org>
 Architecture: i386
 Description: Free Pascal Sources
- The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 32bit
- Pascal Compiler. It comes with fully TP 7.0 compatible run-time library.
+ The Free Pascal Compiler is a Turbo Pascal 7.0 and Delphi compatible 
+ 32/64bit Object Pascal Compiler. It comes with fully TP 7.0
+ compatible run-time library.
  Some extensions are added to the language, like function overloading. Shared
  libraries can be linked and created. Basic Delphi support is already
  implemented (classes,exceptions,ansistrings). This package contains the
