--- a/components/printers/Makefile.fpc
+++ b/components/printers/Makefile.fpc
@@ -5,9 +5,9 @@ name=printer4lazarus
 version=0.0.0.2
 
 [compiler]
-unittargetdir=lib/$(CPU_TARGET)-$(OS_TARGET)
-unitdir=../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/ ../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM)/ ../../packager/units/$(CPU_TARGET)-$(OS_TARGET)/ $(OS_TARGET)/ .
-options=-gl
+unittargetdir=lib/$(CPU_TARGET)-$(OS_TARGET)/
+unitdir=$(OS_TARGET)/ ../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/ ../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM)/ ../../packager/units/$(CPU_TARGET)-$(OS_TARGET)/
+options=-dUseCache  -dLCL -dLCLgtk -S2 -gl
 
 [target]
 units=printer4lazarus.pas
@@ -16,6 +16,7 @@ units=printer4lazarus.pas
 files=$(wildcard $(COMPILER_UNITTARGETDIR)/*$(OEXT)) \
       $(wildcard $(COMPILER_UNITTARGETDIR)/*$(PPUEXT)) \
       $(wildcard $(COMPILER_UNITTARGETDIR)/*$(RSTEXT)) \
+      $(wildcard $(COMPILER_UNITTARGETDIR)/*.compiled) \
       $(wildcard *$(OEXT)) $(wildcard *$(PPUEXT)) $(wildcard *$(RSTEXT))
 
 [rules]
