--- a/.gitattributes
+++ b/.gitattributes
@@ -443,6 +443,8 @@ components/synunihighlighter/synuni.pas svneol=native#text/pascal
 components/synunihighlighter/synunidesigner.pas svneol=native#text/pascal
 components/synunihighlighter/synunihighlighter.pas svneol=native#text/pascal
 components/synunihighlighter/synunireg.pas svneol=native#text/pascal
+components/tdbf/Makefile svneol=native#text/plain
+components/tdbf/Makefile.fpc svneol=native#text/plain
 components/tdbf/dbflaz.lpk svneol=native#text/pascal
 components/tdbf/dbflaz.pas svneol=native#text/pascal
 components/tdbf/registerdbf.lrs svneol=native#text/pascal
@@ -468,6 +470,8 @@ components/trayicon/wsgtk2trayicon.pas svneol=native#text/plain
 components/trayicon/wsgtktrayicon.pas svneol=native#text/plain
 components/trayicon/wstrayicon.pas svneol=native#text/plain
 components/trayicon/wswin32trayicon.pas svneol=native#text/plain
+components/turbopower_ipro/Makefile svneol=native#text/plain
+components/turbopower_ipro/Makefile.fpc svneol=native#text/plain
 components/turbopower_ipro/ipanim.pas svneol=native#text/pascal
 components/turbopower_ipro/ipconst.pas svneol=native#text/pascal
 components/turbopower_ipro/ipdefct.inc svneol=native#text/pascal
