--- a/.gitattributes
+++ b/.gitattributes
@@ -10,6 +10,7 @@ components/cgi/ide/Makefile svneol=native#text/plain
 components/cgi/ide/Makefile.fpc svneol=native#text/plain
 components/cgi/ide/README.txt svneol=native#text/plain
 components/cgi/ide/cgilazide.lpk svneol=native#text/pascal
+components/cgi/ide/cgilazide.pas svneol=native#text/plain
 components/cgi/ide/cgilazideintf.pas svneol=native#text/pascal
 components/cgi/ide/lib/README.txt svneol=native#text/plain
 components/cgi/lib/README.txt svneol=native#text/plain
