--- a/.gitattributes
+++ b/.gitattributes
@@ -488,6 +488,7 @@ components/turbopower_ipro/ipstrms.pas svneol=native#text/pascal
 components/turbopower_ipro/iputils.pas svneol=native#text/pascal
 components/turbopower_ipro/tiphtmlpanel.xpm -text svneol=native#image/x-xpixmap
 components/turbopower_ipro/turbopoweripro.lpk svneol=native#text/pascal
+components/turbopower_ipro/turbopoweripro.pas svneol=native#text/plain
 debugger/breakpointsdlg.lfm svneol=native#text/plain
 debugger/breakpointsdlg.lrs svneol=native#text/pascal
 debugger/breakpointsdlg.pp svneol=native#text/pascal
