--- a/components/cgi/Makefile.fpc
+++ b/components/cgi/Makefile.fpc
@@ -5,9 +5,9 @@ name=cgilaz
 version=0.1.1
 
 [compiler]
-unittargetdir=lib/$(CPU_TARGET)-$(OS_TARGET)/
+unittargetdir=lib/$(CPU_TARGET)-$(OS_TARGET)
 unitdir=../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/ ../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM)/ ../../packager/units/$(CPU_TARGET)-$(OS_TARGET)/
-options=-gl
+options=-dLCL -dLCLgtk -S2 -gl
 
 [target]
 units=cgilaz.pas
@@ -16,6 +16,7 @@ units=cgilaz.pas
 files=$(wildcard $(COMPILER_UNITTARGETDIR)/*$(OEXT)) \
       $(wildcard $(COMPILER_UNITTARGETDIR)/*$(PPUEXT)) \
       $(wildcard $(COMPILER_UNITTARGETDIR)/*$(RSTEXT)) \
+      $(wildcard $(COMPILER_UNITTARGETDIR)/*.compiled) \
       $(wildcard *$(OEXT)) $(wildcard *$(PPUEXT)) $(wildcard *$(RSTEXT))
 
 [rules]
