converted TStringsPropEditorDlg, TCollectionPropertyEditorForm to lfm  from Tomas Gregorovic
 SVN 8581@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1156,6 +1156,8 @@ ideintf/actionseditorstd.lfm svneol=native#text/plain
 ideintf/actionseditorstd.lrs svneol=native#text/pascal
 ideintf/actionseditorstd.pas svneol=native#text/pascal
 ideintf/allideintf.pas svneol=native#text/pascal
+ideintf/collectionpropeditform.lfm svneol=native#text/plain
+ideintf/collectionpropeditform.lrs svneol=native#text/plain
 ideintf/columndlg.pp svneol=native#text/pascal
 ideintf/componenteditors.pas svneol=native#text/pascal
 ideintf/componentreg.pas svneol=native#text/pascal
@@ -1204,6 +1206,8 @@ ideintf/packageintf.pas svneol=native#text/pascal
 ideintf/projectintf.pas svneol=native#text/pascal
 ideintf/propedits.pp svneol=native#text/pascal
 ideintf/srceditorintf.pas svneol=native#text/pascal
+ideintf/stringspropeditdlg.lfm svneol=native#text/plain
+ideintf/stringspropeditdlg.lrs svneol=native#text/plain
 ideintf/texttools.pas svneol=native#text/pascal
 ideintf/treeviewpropedit.lfm svneol=native#text/plain
 ideintf/treeviewpropedit.lrs svneol=native#text/plain
