--- a/.gitattributes
+++ b/.gitattributes
@@ -452,6 +452,7 @@ components/tdbf/dbflaz.pas svneol=native#text/pascal
 components/tdbf/registerdbf.lrs svneol=native#text/pascal
 components/tdbf/registerdbf.pas svneol=native#text/pascal
 components/tdbf/tdbf.xpm -text svneol=native#image/x-xpixmap
+components/trayicon/clean.bat svneol=native#text/plain
 components/trayicon/examples/clean.bat svneol=native#text/plain
 components/trayicon/examples/clean.sh svneol=native#text/plain
 components/trayicon/examples/frmtest.dfm svneol=native#text/plain
@@ -460,6 +461,7 @@ components/trayicon/examples/frmtest.lrs svneol=native#text/plain
 components/trayicon/examples/frmtest.pas svneol=native#text/plain
 components/trayicon/examples/icon.ico -text svneol=unset#image/ico
 components/trayicon/examples/icon.xpm svneol=native#text/plain
+components/trayicon/examples/magnifier.or -text
 components/trayicon/examples/magnifier.res -text
 components/trayicon/examples/wndtray.cfg svneol=native#text/plain
 components/trayicon/examples/wndtray.dof svneol=native#text/plain
@@ -468,6 +470,7 @@ components/trayicon/examples/wndtray.lpi svneol=native#text/plain
 components/trayicon/trayicon.pas svneol=native#text/plain
 components/trayicon/trayiconlaz.lpk svneol=native#text/plain
 components/trayicon/trayiconlaz.pas svneol=native#text/plain
+components/trayicon/wscommontrayicon.pas svneol=native#text/plain
 components/trayicon/wsgtk2trayicon.pas svneol=native#text/plain
 components/trayicon/wsgtktrayicon.pas svneol=native#text/plain
 components/trayicon/wstrayicon.pas svneol=native#text/plain
