--- a/components/trayicon/examples/wndtray.lpi
+++ b/components/trayicon/examples/wndtray.lpi
@@ -11,22 +11,22 @@
       <MainUnit Value="0"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
-      <ActiveEditorIndexAtStart Value="4"/>
+      <ActiveEditorIndexAtStart Value="1"/>
     </General>
     <LazDoc Paths=""/>
-    <Units Count="2">
+    <Units Count="3">
       <Unit0>
-        <CursorPos X="40" Y="28"/>
+        <CursorPos X="15" Y="7"/>
         <EditorIndex Value="0"/>
         <Filename Value="wndtray.dpr"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <TopLine Value="1"/>
         <UnitName Value="wndtray"/>
-        <UsageCount Value="45"/>
+        <UsageCount Value="56"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="25" Y="84"/>
+        <CursorPos X="28" Y="24"/>
         <EditorIndex Value="1"/>
         <Filename Value="frmtest.pas"/>
         <ComponentName Value="Form1"/>
@@ -34,10 +34,18 @@
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <ResourceFilename Value="frmtest.lrs"/>
-        <TopLine Value="58"/>
+        <TopLine Value="1"/>
         <UnitName Value="frmtest"/>
-        <UsageCount Value="45"/>
+        <UsageCount Value="56"/>
       </Unit1>
+      <Unit2>
+        <CursorPos X="12" Y="12"/>
+        <Filename Value="wscommontrayicon.pas"/>
+        <IsPartOfProject Value="True"/>
+        <TopLine Value="1"/>
+        <UnitName Value="wscommontrayicon"/>
+        <UsageCount Value="23"/>
+      </Unit2>
     </Units>
     <PublishOptions>
       <Version Value="2"/>
@@ -51,17 +59,18 @@
         <LaunchingApplication PathPlusParams="/usr/X11R6/bin/xterm -T 'Lazarus Run Output' -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
-    <RequiredPackages Count="2">
+    <RequiredPackages Count="1">
       <Item1>
-        <PackageName Value="TrayIconLaz"/>
-      </Item1>
-      <Item2>
         <PackageName Value="LCL"/>
-      </Item2>
+      </Item1>
     </RequiredPackages>
   </ProjectOptions>
   <CompilerOptions>
     <Version Value="5"/>
+    <SearchPaths>
+      <OtherUnitFiles Value="$(LazarusDir)/lcl/units/$(TargetCPU)-$(TargetOS)/;$(LazarusDir)/lcl/units/$(TargetCPU)-$(TargetOS)/$(LCLWidgetType)/;../"/>
+      <SrcPath Value="$(LazarusDir)/lcl/;$(LazarusDir)/lcl/interfaces/$(LCLWidgetType)/;../"/>
+    </SearchPaths>
     <CodeGeneration>
       <Generate Value="Faster"/>
     </CodeGeneration>
