added to bigide: jpeg, projecttemplates, fpcunit
 SVN 8583@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -106,11 +106,15 @@ components/customform/demo/dbappform.pas svneol=native#text/plain
 components/customform/demo/regappforms.pp svneol=native#text/plain
 components/customform/lazcustforms.lpk svneol=native#text/plain
 components/customform/lazcustforms.pas svneol=native#text/plain
+components/fpcunit/Makefile svneol=native#text/plain
+components/fpcunit/Makefile.fpc svneol=native#text/plain
 components/fpcunit/fpcunittestrunner.lpk svneol=native#text/pascal
 components/fpcunit/fpcunittestrunner.pas svneol=native#text/pascal
 components/fpcunit/guitestrunner.lfm svneol=native#text/plain
 components/fpcunit/guitestrunner.lrs svneol=native#text/pascal
 components/fpcunit/guitestrunner.pas svneol=native#text/pascal
+components/fpcunit/ide/Makefile svneol=native#text/plain
+components/fpcunit/ide/Makefile.fpc svneol=native#text/plain
 components/fpcunit/ide/README.txt svneol=native#text/plain
 components/fpcunit/ide/fpcunitide.lpk svneol=native#text/pascal
 components/fpcunit/ide/fpcunitide.pas svneol=native#text/pascal
@@ -145,6 +149,8 @@ components/interbase/tibdatabase.xpm -text svneol=native#image/x-xpixmap
 components/interbase/tibquery.ico -text svneol=unset#image/x-icon
 components/interbase/tibquery.xpm -text svneol=native#image/x-xpixmap
 components/interbase/tibtransaction.xpm -text svneol=native#image/x-xpixmap
+components/jpeg/Makefile svneol=native#text/plain
+components/jpeg/Makefile.fpc svneol=native#text/plain
 components/jpeg/examples/README.txt svneol=native#text/plain
 components/jpeg/examples/jpegexample.lpi svneol=native#text/plain
 components/jpeg/examples/jpegexample.lpr svneol=native#text/pascal
@@ -250,6 +256,8 @@ components/printers/win32/winprinters_h.inc svneol=native#text/pascal
 components/printers/win32/winprndialogs.inc svneol=native#text/pascal
 components/printers/win32/winutilprn.pas svneol=native#text/pascal
 components/printers/win32/winutilprnconst.inc svneol=native#text/pascal
+components/projecttemplates/Makefile svneol=native#text/plain
+components/projecttemplates/Makefile.fpc svneol=native#text/plain
 components/projecttemplates/README svneol=native#text/plain
 components/projecttemplates/frmtemplatesettings.lfm svneol=native#text/plain
 components/projecttemplates/frmtemplatesettings.lrs svneol=native#text/plain
