--- a/ide/Makefile.fpc
+++ b/ide/Makefile.fpc
@@ -98,7 +98,11 @@ BIG_IDE_OPTIONS=-dBigIDE \
   -Fu../components/cgi/ide/lib/$(CPU_TARGET)-$(OS_TARGET) \
   -Fu../components/cgi/lib/$(CPU_TARGET)-$(OS_TARGET) \
   -Fu../components/tdbf/lib/$(CPU_TARGET)-$(OS_TARGET) \
-  -Fu../components/turbopower_ipro/units/$(CPU_TARGET)-$(OS_TARGET)
+  -Fu../components/turbopower_ipro/units/$(CPU_TARGET)-$(OS_TARGET) \
+  -Fu../components/jpeg/lib/$(CPU_TARGET)-$(OS_TARGET) \
+  -Fu../components/fpcunit/lib/$(CPU_TARGET)-$(OS_TARGET) \
+  -Fu../components/fpcunit/ide/lib/$(CPU_TARGET)-$(OS_TARGET) \
+  -Fu../components/projecttemplates/lib/$(CPU_TARGET)-$(OS_TARGET)
 
 #-----------------------------------------------------------------------------
 [rules]
