added SQLDBLaz to bigide
 SVN 8585@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -336,6 +336,8 @@ components/sdf/sdflaz.lpk svneol=native#text/pascal
 components/sdf/sdflaz.pas svneol=native#text/pascal
 components/sdf/tfixedformatdataset.xpm -text svneol=native#image/x-xpixmap
 components/sdf/tsdfdataset.xpm -text svneol=native#image/x-xpixmap
+components/sqldb/Makefile svneol=native#text/plain
+components/sqldb/Makefile.fpc svneol=native#text/plain
 components/sqldb/registersqldb.lrs svneol=native#text/pascal
 components/sqldb/registersqldb.pas svneol=native#text/pascal
 components/sqldb/sqldblaz.lpk svneol=native#text/pascal
