--- a/components/Makefile.fpc
+++ b/components/Makefile.fpc
@@ -31,5 +31,6 @@ bigidecomponents: all
         $(MAKE) -C fpcunit
         $(MAKE) -C fpcunit/ide
         $(MAKE) -C projecttemplates
+        $(MAKE) -C sqldb
 
 cleanlaz: clean
