--- a/components/opengl/example/testopenglcontext1.lpi
+++ b/components/opengl/example/testopenglcontext1.lpi
@@ -11,27 +11,29 @@
       <MainUnit Value="0"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=""/>
-      <ActiveEditorIndexAtStart Value="1"/>
+      <ActiveEditorIndexAtStart Value="2"/>
     </General>
     <LazDoc Paths=""/>
     <Units Count="2">
       <Unit0>
         <CursorPos X="1" Y="14"/>
+        <EditorIndex Value="3"/>
         <Filename Value="testopenglcontext1.lpr"/>
         <IsPartOfProject Value="True"/>
+        <Loaded Value="True"/>
         <TopLine Value="1"/>
         <UnitName Value="TestOpenGLContext1"/>
         <UsageCount Value="141"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="19" Y="109"/>
+        <CursorPos X="9" Y="107"/>
         <EditorIndex Value="0"/>
         <Filename Value="mainunit.pas"/>
         <ComponentName Value="Form1"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <ResourceFilename Value="mainunit.lrs"/>
-        <TopLine Value="97"/>
+        <TopLine Value="96"/>
         <UnitName Value="MainUnit"/>
         <UsageCount Value="141"/>
       </Unit1>
