--- a/ide/Makefile.fpc
+++ b/ide/Makefile.fpc
@@ -102,7 +102,8 @@ BIG_IDE_OPTIONS=-dBigIDE \
   -Fu../components/jpeg/lib/$(CPU_TARGET)-$(OS_TARGET) \
   -Fu../components/fpcunit/lib/$(CPU_TARGET)-$(OS_TARGET) \
   -Fu../components/fpcunit/ide/lib/$(CPU_TARGET)-$(OS_TARGET) \
-  -Fu../components/projecttemplates/lib/$(CPU_TARGET)-$(OS_TARGET)
+  -Fu../components/projecttemplates/lib/$(CPU_TARGET)-$(OS_TARGET) \
+  -Fu../components/sqldb/lib/$(CPU_TARGET)-$(OS_TARGET)
 
 #-----------------------------------------------------------------------------
 [rules]
