Makefile custom options are now platform independent
 SVN 8590@trunk

--- a/components/printers/Makefile
+++ b/components/printers/Makefile
@@ -462,115 +462,115 @@ ifeq ($(FULL_TARGET),powerpc64-linux)
 override CLEAN_FILES+=$(wildcard $(COMPILER_UNITTARGETDIR)/*$(OEXT)) $(wildcard $(COMPILER_UNITTARGETDIR)/*$(PPUEXT)) $(wildcard $(COMPILER_UNITTARGETDIR)/*$(RSTEXT)) $(wildcard $(COMPILER_UNITTARGETDIR)/*.compiled) $(wildcard *$(OEXT)) $(wildcard *$(PPUEXT)) $(wildcard *$(RSTEXT))
 endif
 ifeq ($(FULL_TARGET),i386-linux)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),i386-go32v2)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),i386-win32)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),i386-os2)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),i386-freebsd)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),i386-beos)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),i386-netbsd)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),i386-solaris)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),i386-qnx)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),i386-netware)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),i386-openbsd)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),i386-wdosx)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),i386-emx)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),i386-watcom)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),i386-netwlibc)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),i386-wince)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),m68k-linux)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),m68k-freebsd)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),m68k-netbsd)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),m68k-amiga)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),m68k-atari)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),m68k-openbsd)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),m68k-palmos)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),powerpc-linux)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),powerpc-netbsd)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),powerpc-macos)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),powerpc-darwin)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),powerpc-morphos)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),sparc-linux)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),sparc-netbsd)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),sparc-solaris)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),x86_64-linux)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),x86_64-freebsd)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),x86_64-win64)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),arm-linux)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),arm-wince)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),powerpc64-linux)
-override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+override COMPILER_OPTIONS+=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 endif
 ifeq ($(FULL_TARGET),i386-linux)
 override COMPILER_UNITDIR+=$(OS_TARGET)/ ../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/ ../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM)/ ../../packager/units/$(CPU_TARGET)-$(OS_TARGET)/
