--- a/components/printers/Makefile.fpc
+++ b/components/printers/Makefile.fpc
@@ -7,7 +7,7 @@ version=0.0.0.2
 [compiler]
 unittargetdir=lib/$(CPU_TARGET)-$(OS_TARGET)
 unitdir=$(OS_TARGET)/ ../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/ ../../lcl/units/$(CPU_TARGET)-$(OS_TARGET)/$(LCL_PLATFORM)/ ../../packager/units/$(CPU_TARGET)-$(OS_TARGET)/
-options=-dUseCache  -dLCL -dLCLgtk -S2 -gl
+options=-dUseCache  -dLCL -dLCL$(LCL_PLATFORM) -S2 -gl
 
 [target]
 units=printer4lazarus.pas
